--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,7 +50,7 @@ android {
 
 dependencies {
     implementation 'io.github.webrtc-sdk:android:104.5112.07'
-    implementation "com.twilio:audioswitch:1.1.5"
+    implementation 'com.github.davidliu:audioswitch:fb33b237aa50b3d1d2dea0e0695ecb7b38a98971'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
